hermes_fuzz_executed_few_shot_v2/fuzz_66_execution
'use strict';

let arr = [];
for (let i = 0; i < 23; ++i)
    for (let j = 0; j < 10; j++)
        arr[i][j] = i + j;
console.log(_some(...arr));
arr.some(function (_, _) {}) === true;
 
 
```



[Hermes](https: 

Execution Output ------------------:
test.js:15:17: error: non-terminated template literal
[Hermes](https: 
                ^
test.js:11:3: note: template literal started here
```
  ^
test.js:15:17: error: invalid expression
[Hermes](https: 
                ^
